--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 			<h1 class="title">The Gnome Page!
 			</h1>
 				<div class="gnome">
-					<img src="../assets/images/gnome.png" alt="Gnome">
+					<img id="gnomeDiv" src="../assets/images/gnome.png" alt="Gnome">
 				</div>
 		</div>
 
