--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,8 @@
             <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
             <input type="submit" class="ghost-button" value="Get Weather">
         </form>
-        <div class="calendar"></div>
+        <div>
+            {{data}}
+        </div>
     </fieldset>
 </div>
