initial database created

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
             <input type="submit" class="ghost-button" value="Get Weather">
         </form>
         <div>
-            {{data}}
+            <p>{{data}}</p>
         </div>
     </fieldset>
 </div>
