--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,6 +5,7 @@
             <input type="submit" class="ghost-button" value="Get Weather">
         </form>
         <div>
+            <h5>Hurray! you are logged in.</h5>
             <p>{{data}}</p>
         </div>
     </fieldset>
