displaying weather, news, and sports

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,12 +1,11 @@
 <div class="container">
     <fieldset>
-        <form action="/" method="post">
-            <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-            <input type="submit" class="ghost-button" value="Get Weather">
-        </form>
         <div>
             <h5>Hurray! you are logged in.</h5>
-            <p>{{data}}</p>
+            <p>{{weather}}</p>
+            <p>{{news}}</p>
+            <p>{{sports}}</p>
+            <img src="{{logo}}">
         </div>
     </fieldset>
 </div>
