first branch push

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,8 @@
             <p>{{news}}</p>
             <p>{{sports}}</p>
             <img src="{{logo}}">
+            <p>{{events}}</p>
+
         </div>
     </fieldset>
 </div>
