--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -31,11 +31,12 @@
 	<body>
 		{{{ body }}}
 
-		<script src="/assets/js/app.js"></script>
+		<!-- js -->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script src="js/jquery.vide.min.js"></script>
+        <!-- //js -->
+        <script src="/assets/js/app.js"></script>
+
 	</body>
-		<!--//footer-->
-		<script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
-		<script src="js/jquery.vide.min.js"></script>
-		<!-- //js -->
 
 </html>
