--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
 
 
 	<div class="col-md-12">
-		<h1 class="title">The Gnome Page!
+		{{!-- <h1 class="title">The Gnome Page! --}}
 		</h1>
 		<div class="gnome">
 			<img id="gnomeDiv" src="../assets/images/gnome.png" alt="Gnome">
