--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,58 +1,149 @@
-<div id="container">
+<!-- Navigation -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<div class="container">
+		<a class="navbar-brand" href="#">Start Bootstrap</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+		    aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+		<div class="collapse navbar-collapse" id="navbarResponsive">
+			<ul class="navbar-nav ml-auto">
+				<li class="nav-item active">
+					<a class="nav-link" href="#">Home
+						<span class="sr-only">(current)</span>
+					</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">About</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Services</a>
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#">Contact</a>
+				</li>
+			</ul>
+		</div>
+	</div>
+</nav>
+<!-- Page Content -->
+<div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<h1 class="title">The Gnome Page!
 			</h1>
-				<div class="gnome">
-					<img src="../assets/images/gnome.png" alt="Gnome">
-				</div>
-		</div>
-
-
-		<!-- calendar -->
-		<div class="col-md-6">
-			<h2>Your Upcoming Events!</h2>
-			<div id="calendar"></div>
-			<p>
-				{{calendar}}
-			</p>
-		</div>
-
-
-		<!-- weather -->
-		<div class="col-md-6">
-				<h2>Your Current Weather!</h2>
-			<div id="weather">
-				<fieldset>
-					<form action="/" method="post">
-						<input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-						<input type="submit" class="ghost-button" value="Get Weather">
-					</form>
-					<p>
-						{{weather}}
-					</p>
-				</fieldset>
+			<div class="gnome">
+				<img id="gnomeDiv" src="../assets/images/gnome.png" alt="Gnome">
 			</div>
 		</div>
 
-		<!-- email -->
-		<div class="col-md-6">
-			<h2>Your Most Recent Emails!</h2>
-			<div id="email"></div>
-			<p>
-				{{email}}
-			</p>
+		<!--header-->
+		<div class="header-w3l">
+			<h1>Welcome, to your personalized Gnomepage</h1>
 		</div>
 
-		<!-- tasks -->
-		<div class="col-md-6">
-			<h2>Your Tasks to Complete!</h2>
-			<div id="tasks"></div>
-			<p>
-				{{tasks}}
-			</p>
-		</div>
+		<!-- Jumbotron Header -->
+		{{!-- <header class="jumbotron my-4">
+			<h1 class="display-3">A Warm Welcome!</h1>
+			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit
+				vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
+			<a href="#" class="btn btn-primary btn-lg">Call to action!</a>
+		</header> --}}
 
-		<!-- footer -->
+		<!-- Page Features -->
+		<div class="row text-center">
+
+			<!-- calendar -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card">
+					<div class="card-body">
+						<div class="sub-main-w3" id="d2">
+							<h2>Your Upcoming Events!</h2>
+							<h6>{{calendar}}</h6>
+							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
+							<img src="{{logo}}">
+						</div>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">Find Out More!</a>
+					</div>
+				</div>
+			</div>
+
+
+			<!-- weather -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card">
+					<div class="card-body">
+						<div class="sub-main-w3" id="d2">
+							<h2>Weather</h2>
+							{{!-- <img class="card-img-top" src="http://placehold.it/500x325" alt=""> --}}
+							<h6>{{weather}}</h6>
+						</div>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">Find Out More!</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- email -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card">
+					<div class="card-body">
+						<div class="sub-main-w3" id="d4">
+							<h2>Email</h2>
+							<h6>{{email}}</h6>
+							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
+							<img src="{{logo}}">
+						</div>
+					</div>
+					<div class="card-footer">
+						<a href="#" class="btn btn-primary">Find Out More!</a>
+					</div>
+				</div>
+			</div>
+
+			<!-- sports -->
+			<div class="col-lg-3 col-md-6 mb-4">
+				<div class="card">
+					<div class="card-body">
+						<div class="sub-main-w3" id="d4">
+							<h2>Sportsball</h2>
+							<h6>{{sports}}</h6>
+							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
+							<img src="{{logo}}">
+						</div>
+						<div class="card-footer">
+							<a href="#" class="btn btn-primary">Find Out More!</a>
+						</div>
+					</div>
+				</div>
+
+				<!-- news -->
+				<div class="col-lg-3 col-md-6 mb-4">
+					<div class="card">
+						{{!-- <img class="card-img-top" src="http://placehold.it/500x325" alt=""> --}}
+						<div class="card-body">
+							<div class="sub-main-w3" id="d3">
+								<h2>News</h2>
+								<h6>{{news}}</h6>
+							</div>
+						</div>
+						<div class="card-footer">
+							<a href="#" class="btn btn-primary">Find Out More!</a>
+						</div>
+					</div>
+				</div>
+			</div>
+
+		</div>
+	</div>
+
+	<!-- footer -->
+	<div class="footer">
+		<p>&copy; 2018 The Gnome Page. All rights reserved | Design by
+			<a href="https://github.com/petercboss/Papayas-Project-2">Papayas-Project-2</a>
+		</p>
 	</div>
 </div>
