--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,12 @@
 		<!-- css files -->
 		<link rel="stylesheet" href="/assets/css/font-awesome.css">
 		<!-- Font-Awesome-Icons-CSS -->
+		<!-- Bootstrap core CSS -->
+		<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
 		    crossorigin="anonymous">
+		<!-- Custom styles for this template -->
+		<link href="/assets/css/heroic-features.css" rel="stylesheet">
 		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
 		<!-- Style-CSS -->
 		<!-- //css files -->
