--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -42,14 +42,6 @@
 			<h1>Welcome, to your personalized Gnomepage</h1>
 		</div>
 
-		<!-- Jumbotron Header -->
-		{{!-- <header class="jumbotron my-4">
-			<h1 class="display-3">A Warm Welcome!</h1>
-			<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, ipsam, eligendi, in quo sunt possimus non incidunt odit
-				vero aliquid similique quaerat nam nobis illo aspernatur vitae fugiat numquam repellat.</p>
-			<a href="#" class="btn btn-primary btn-lg">Call to action!</a>
-		</header> --}}
-
 		<!-- Page Features -->
 		<div class="row text-center">
 
@@ -58,10 +50,10 @@
 				<div class="card">
 					<div class="card-body">
 						<div class="sub-main-w3" id="d2">
-							<h2>Your Upcoming Events!</h2>
-							<h6>{{calendar}}</h6>
+							<h2>Calendar</h2>
 							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
-							<img src="{{logo}}">
+							<img class="card-img-top" src="../assets/images/gcalendar.png" alt="">
+							<h6>{{calendar}}</h6>
 						</div>
 					</div>
 					<div class="card-footer">
@@ -77,7 +69,7 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d2">
 							<h2>Weather</h2>
-							{{!-- <img class="card-img-top" src="http://placehold.it/500x325" alt=""> --}}
+							<img class="card-img-top" src="../assets/images/weather.png" alt="">
 							<h6>{{weather}}</h6>
 						</div>
 					</div>
@@ -93,9 +85,8 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d4">
 							<h2>Email</h2>
+							<img class="card-img-top" src="../assets/images/gmail.png" alt="">
 							<h6>{{email}}</h6>
-							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
-							<img src="{{logo}}">
 						</div>
 					</div>
 					<div class="card-footer">
@@ -110,9 +101,8 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d4">
 							<h2>Sportsball</h2>
+							<img class="card-img-top" src="{{logo}}"alt="">
 							<h6>{{sports}}</h6>
-							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
-							<img src="{{logo}}">
 						</div>
 						<div class="card-footer">
 							<a href="#" class="btn btn-primary">Find Out More!</a>
@@ -123,10 +113,10 @@
 				<!-- news -->
 				<div class="col-lg-3 col-md-6 mb-4">
 					<div class="card">
-						{{!-- <img class="card-img-top" src="http://placehold.it/500x325" alt=""> --}}
 						<div class="card-body">
 							<div class="sub-main-w3" id="d3">
 								<h2>News</h2>
+								<img class="card-img-top" src="../assets/images/news.png" alt="">
 								<h6>{{news}}</h6>
 							</div>
 						</div>
