--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -17,6 +17,7 @@
 				<h2>Sign In</h2>
 				<form id="signin" name="signin" method="post" action="signin">
 					<h6>Swiftly sign in with</h6>
+					<img src="../assets/images/google.png">
 
 					<div class="icon1">
 						<label for="email"></label>
