--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -17,6 +17,7 @@
 				<h2>Sign Up</h2>
 				<form id="signup" name="signup" method="post" action="/signup">
 					<h6>Swiftly sign in with</h6>
+					<img src="../assets/images/google.png">
 
 					<div class="icon1">
 						<label for="email"></label>
