--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -53,7 +53,7 @@
 							<h2>Calendar</h2>
 							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
 							<img class="card-img-top" src="../assets/images/gcalendar.png" alt="">
-							<h6>{{calendar}}</h6>
+							<p>{{calendar}}</p>
 						</div>
 					</div>
 					<div class="card-footer">
@@ -86,7 +86,7 @@
 						<div class="sub-main-w3" id="d4">
 							<h2>Email</h2>
 							<img class="card-img-top" src="../assets/images/gmail.png" alt="">
-							<h6>{{email}}</h6>
+							<p>{{email}}</p>
 						</div>
 					</div>
 					<div class="card-footer">
