--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -43,10 +43,12 @@ body {
     animation: mymove 1s infinite;
 }
 
-.card-img-top{
-	width: 128px;
-	height: 128px;
+.card-img-top {
+    width: 128px;
+    height: 128px;
 }
+
+
 /* Chrome, Safari, Opera */
 
 @-webkit-keyframes mymove {
@@ -948,6 +950,68 @@ input.checkbox:checked:after {
 .row {
     margin-right: -15px;
     margin-left: -15px;
+    background: rgba(19, 17, 17, 0.014);
+    box-shadow: 2px 2px 21px rgba(0, 0, 0, 0.29);
+}
+
+.card {
+    margin-right: -15px;
+    margin-left: -15px;
     background: rgba(19, 17, 17, 0.62);
     box-shadow: 2px 2px 21px rgba(0, 0, 0, 0.29);
+    padding: .5em 1em;
+    text-decoration: none;
+}
+
+#button {
+    padding: .5em 1em;
+    text-decoration: none;
+}
+
+#effect {
+    width: 276px;
+    height: 276px;
+    padding: 0.4em;
+    /* position: relative; */
+}
+
+
+/* #effect h2 {
+    margin: 0;
+    padding: 0.4em;
+    text-align: center;
+} */
+
+
+/* .sub-main-w3 input[type="submit"] {
+    color: #fff;
+    background: #34bf49;
+    border: none;
+    width: 100%;
+    padding: .8em 0em;
+    outline: none;
+    font-size: 1.1em;
+    cursor: pointer;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all;
+    -o-transition: 0.5s all;
+    -moz-transition: 0.5s all;
+    -ms-transition: 0.5s all;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 1.5em;
+} */
+
+a.btn-primary {
+    cursor: default;
+    font-size: 90%;
+    opacity: .3;
+    background: rgba(19, 17, 17, 0.62);
+    border-style: none;
+}
+
+a.btn-primary:hover {
+    background: #ff4c4c;
+    color: #fff;
 }
