--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -30,8 +30,6 @@
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<h1 class="title">The Gnome Page!
-			</h1>
 			<div class="gnome">
 				<img id="gnomeDiv" src="../assets/images/gnome.png" alt="Gnome">
 			</div>
@@ -39,7 +37,7 @@
 
 		<!--header-->
 		<div class="header-w3l">
-			<h1>Welcome, to your personalized Gnomepage</h1>
+			<h1>Welcome, {{user.firstname}}</h1>
 		</div>
 
 		<!-- Page Features -->
@@ -47,7 +45,7 @@
 
 			<!-- calendar -->
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card">
+				<div id = "effect" class="card">
 					<div class="card-body">
 						<div class="sub-main-w3" id="d2">
 							<h2>Calendar</h2>
@@ -57,7 +55,7 @@
 						</div>
 					</div>
 					<div class="card-footer">
-						<a href="#" class="btn btn-primary">Find Out More!</a>
+						<a class="btn btn-primary">Hide Calendar</a>
 					</div>
 				</div>
 			</div>
@@ -65,7 +63,7 @@
 
 			<!-- weather -->
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card">
+				<div id = "effect" class="card">
 					<div class="card-body">
 						<div class="sub-main-w3" id="d2">
 							<h2>Weather</h2>
@@ -74,14 +72,14 @@
 						</div>
 					</div>
 					<div class="card-footer">
-						<a href="#" class="btn btn-primary">Find Out More!</a>
+						<a class="btn btn-primary">Hide Weather</a>
 					</div>
 				</div>
 			</div>
 
 			<!-- email -->
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card">
+				<div id = "effect" class="card">
 					<div class="card-body">
 						<div class="sub-main-w3" id="d4">
 							<h2>Email</h2>
@@ -90,14 +88,14 @@
 						</div>
 					</div>
 					<div class="card-footer">
-						<a href="#" class="btn btn-primary">Find Out More!</a>
+						<a class="btn btn-primary">Hide Email</a>
 					</div>
 				</div>
 			</div>
 
 			<!-- news -->
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card">
+				<div id = "effect" class="card">
 					<div class="card-body">
 						<div class="sub-main-w3" id="d3">
 							<h2>News</h2>
@@ -106,7 +104,7 @@
 						</div>
 					</div>
 					<div class="card-footer">
-						<a href="#" class="btn btn-primary">Find Out More!</a>
+						<a class="btn btn-primary">Hide News</a>
 					</div>
 				</div>
 			</div>
@@ -114,7 +112,7 @@
 
 			<!-- sports -->
 			<div class="col-lg-3 col-md-6 mb-4">
-				<div class="card">
+				<div id = "effect" class="card">
 					<div class="card-body">
 						<div class="sub-main-w3" id="d4">
 							<h2>Sportsball</h2>
@@ -122,7 +120,7 @@
 							<h6>{{sports}}</h6>
 						</div>
 						<div class="card-footer">
-							<a href="#" class="btn btn-primary">Find Out More!</a>
+							<a class="btn btn-primary">Hide Sports</a>
 						</div>
 					</div>
 				</div>
