--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,8 +50,7 @@
 						<div class="sub-main-w3" id="d2">
 							<h2>Calendar</h2>
 							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
-							<img class="card-img-top" src="../assets/images/gcalendar.png" alt="">
-							<p>{{calendar}}</p>
+							<iframe src="{{calendar}}"></iframe>
 						</div>
 					</div>
 					<div class="card-footer">
