--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,40 +1,69 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-	<div class="container">
-		<a class="navbar-brand" href="#">Start Bootstrap</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-		    aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarResponsive">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Services</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact</a>
-				</li>
-			</ul>
-		</div>
-	</div>
-</nav>
+    <ul id="menu">
+        <li>
+            <a href="#">Home</a>
+        </li>
+        <li>
+            <a href="#">About ￬</a>
+            <ul class="hidden">
+                <li>
+                    <a href="#">Who We Are
+                        <!-- Rounded switch -->
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">What We Do
+                        <!-- Rounded switch -->
+                        <label class="switch">
+                            <input type="checkbox">
+                            <span class="slider round"></span>
+                        </label>
+                    </a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">Portfolio ￬</a>
+            <ul class="hidden">
+                <li>
+                    <a href="#">Photography</a>
+                </li>
+                <li>
+                    <a href="#">Web & User Interface Design</a>
+                </li>
+                <li>
+                    <a href="#">Illustration</a>
+                </li>
+            </ul>
+        </li>
+        <li>
+            <a href="#">News</a>
+        </li>
+        <li>
+            <a href="#">Contact</a>
+        </li>
+    </ul>
 <!-- Page Content -->
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
 			<h1 class="title">The Gnome Page!
 			</h1>
+			{{!--
 			<div class="gnome">
 				<img id="gnomeDiv" src="../assets/images/gnome.png" alt="Gnome">
+			</div> --}}
+			<p>
+				<button onclick="myMove()">Click Me</button>
+			</p>
+			<div class="myContainer">
+				<img id="myAnimation" src="../assets/images/gnome.png" alt="Gnome">
 			</div>
+
 		</div>
 
 		<!--header-->
@@ -51,7 +80,8 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d2">
 							<h2>Calendar</h2>
-							{{!-- <img class="card-img-top" src="{{logo}}" alt=""> --}}
+							{{!--
+							<img class="card-img-top" src="{{logo}}" alt=""> --}}
 							<img class="card-img-top" src="../assets/images/gcalendar.png" alt="">
 							<p>{{calendar}}</p>
 						</div>
