--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,64 +1,68 @@
-<!DOCTYPE html>
-<html>
+<body>
+	<!--header-->
+	<div class="header-w3l">
+		<h1>Transparent Sign In Form</h1>
+	</div>
+	<!--//header-->
+	<!--main-->
 
-	<head>
-		<title></title>
-	</head>
+	<div class="main-content-agile">
+		<div class="sub-main-w3">
+			<h2>Sign Up</h2>
+			<form id="signup" name="signup" method="post" action="/signup">
+				<h6>Swiftly sign in with</h6>
+				<img src="../assets/images/google.png">
 
-	<body>
-		<!--header-->
-		<div class="header-w3l">
-			<h1>Transparent Sign In Form</h1>
+
+				<div class="icon1">
+					<label for="email"></label>
+					<input class="text" name="email" type="email" placeholder="Email" />
+				</div>
+
+				<div class="icon3">
+					<label for="firstname"></label>
+					<input name="firstname" type="text" placeholder="First Name" />
+				</div>
+
+				<div class="icon4">
+					<label for="lastname"></label>
+					<input name="lastname" type="text" placeholder="Last Name" />
+				</div>
+
+				<div class="icon5">
+					<label for="city"></label>
+					<input name="city" type="text" placeholder="City" />
+				</div>
+
+				<div class="icon2">
+					<label for="password"></label>
+					<input name="password" type="password" placeholder="Password" />
+				</div>
+
+				<label class="anim">
+					<input type="checkbox" class="checkbox">
+					<span>Remember Me</span>
+					<a href="#">Forgot Password</a>
+				</label>
+
+
+				<div class="clear"></div>
+
+				{{!-- <input class="btn" type="submit" value="Sign Up" /> --}}
+
+				<div class="g-signin2" data-onsuccess="onSignIn"></div>
+				<div class="data">
+					<p>Profile Details</p>
+					<img id="pic" class="img-circle" width='100' height='100' />
+					<p>Email Address</p>
+					<p id="email" class="alert alert-danger"></p>
+					<button onclick="signOut()" class="btn btn-danger">SignOut</button>
+				</div>
+
+			</form>
 		</div>
-		<!--//header-->
-		<!--main-->
-		<div class="main-content-agile">
-			<div class="sub-main-w3">
-				<h2>Sign Up</h2>
-				<form id="signup" name="signup" method="post" action="/signup">
-					<h6>Swiftly sign in with</h6>
-					<img src="../assets/images/google.png">
-
-					<div class="icon1">
-						<label for="email"></label>
-						<input class="text" name="email" type="email" placeholder="Email" />
-					</div>
-
-					<div class="icon3">
-						<label for="firstname"></label>
-						<input name="firstname" type="text" placeholder="First Name" />
-					</div>
-
-					<div class="icon4">
-						<label for="lastname"></label>
-						<input name="lastname" type="text" placeholder="Last Name" />
-					</div>
-
-					<div class="icon5">
-						<label for="city"></label>
-						<input name="city" type="text" placeholder="City" />
-					</div>
-
-					<div class="icon2">
-						<label for="password"></label>
-						<input name="password" type="password" placeholder="Password" />
-					</div>
-
-					<label class="anim">
-						<input type="checkbox" class="checkbox">
-						<span>Remember Me</span>
-						<a href="#">Forgot Password</a>
-					</label>
+	</div>
 
 
-					<div class="clear"></div>
 
-					<input class="btn" type="submit" value="Sign Up" />
-
-				</form>
-			</div>
-		</div>
-
-	</body>
-
-</html>
+</body>
