--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -38,6 +38,10 @@
 						<label for="city"></label>
 						<input name="city" type="text" placeholder="City" />
 					</div>
+					<div class="icon7">
+						<label for="sports"></label>
+						<input name="sports" type="text" placeholder="Favorite Sports Team" />
+					</div>
 
 					<div class="icon2">
 						<label for="password"></label>
