--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,7 +37,7 @@
 
 		<!--header-->
 		<div class="header-w3l">
-			<h1>Welcome, {{user.firstname}}</h1>
+			<h1>Welcome, {{username}}</h1>
 		</div>
 
 		<!-- Page Features -->
@@ -98,8 +98,7 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d3">
 							<h2>News</h2>
-							<img class="card-img-top" src="../assets/images/news.png" alt="">
-							<h6>{{news}}</h6>
+							<div>{{{news}}}</div>
 						</div>
 					</div>
 					<div class="card-footer">
