--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,8 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="keywords" content="Transparent Sign In Form Responsive Widget,Login form widgets, Sign up Web forms , Login signup Responsive web form,Flat Pricing table,Flat Drop downs,Registration Forms,News letter Forms,Elements"
 		/>
+		{{!-- tab picture --}}
+        <link rel=“icon” href=“../../assets/images/gnome.png”>
 		<script type="application/x-javascript">
 			addEventListener("load", function () {
 				setTimeout(hideURLbar, 0);
@@ -37,11 +39,11 @@
 	</head>
 
 	<body>
-		{{{ body }}}
 		<!-- js -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 		<!-- //js -->
 		<script src="/assets/js/app.js"></script>
+		{{{ body }}}
 	</body>
 
 </html>
