--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -66,6 +66,7 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d2">
 							<h2>Weather</h2>
+							<h6>{{city}}</h6>
 							<img class="card-img-top" src="../assets/images/weather.png" alt="">
 							<h6>{{weather}}</h6>
 						</div>
@@ -82,7 +83,6 @@
 					<div class="card-body">
 						<div class="sub-main-w3" id="d4">
 							<h2>Email</h2>
-							<img class="card-img-top" src="../assets/images/gmail.png" alt="">
 							<p>{{email}}</p>
 						</div>
 					</div>
@@ -115,7 +115,7 @@
 						<div class="sub-main-w3" id="d4">
 							<h2>Sportsball</h2>
 							<img class="card-img-top" src="{{logo}}" alt="">
-							<h6>{{sports}}</h6>
+							<h6>{{{sports}}}</h6>
 						</div>
 						<div class="card-footer">
 							<a class="btn btn-primary">Hide Sports</a>
