--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,6 +2,7 @@
 <html lang="en">
 
 	<head>
+		<meta name="google-site-verification" content="k_opj30vEv_6hLi9DFHI_0THAWskASexkEiy_S0ilng" />
 		<title>Papayas</title>
 		<!-- Meta tag Keywords -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
