--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,7 +1,7 @@
 <body>
 	<!--header-->
 	<div class="header-w3l">
-		<h1>Transparent Sign In Form</h1>
+		<h1>Sign in with the Gnome Page</h1>
 	</div>
 	<!--//header-->
 	<!--main-->
@@ -9,7 +9,7 @@
 		<div class="sub-main-w3">
 			<h2>Sign In</h2>
 			<form id="signin" name="signin" method="post" action="signin">
-				<h6>Swiftly sign in with</h6>
+				<h6>Sign in with with your Google Account</h6>
 				<img src="../assets/images/google.png">
 
 
@@ -24,28 +24,12 @@
 					<input name="password" type="password" placeholder="Password" />
 				</div>
 
-				<label class="anim">
-					<input type="checkbox" class="checkbox">
-					<span>Remember Me</span>
-					<a href="#">Forgot Password</a>
-				</label>
-
-
 				<div class="clear"></div>
 
 				<input class="btn" type="submit" value="Sign In" />
 
 
 			</form>
-
-	<div class="g-signin2" data-onsuccess="onSignIn"></div>
-	<div class="data">
-		<p>Profile Details</p>
-		<img id="pic" class="img-circle" width='100' height='100' />
-		<p>Email Address</p>
-		<p id="email" class="alert alert-danger"></p>
-		<button onclick="signOut()" class="btn btn-danger">SignOut</button>
-	</div>
 
 		</div>
 	</div>
