--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
 <body>
 	<!--header-->
 	<div class="header-w3l">
-		<h1>Transparent Sign In Form</h1>
+		<h1>Sign in with the Gnome Page</h1>
 	</div>
 	<!--//header-->
 	<!--main-->
@@ -10,7 +10,7 @@
 		<div class="sub-main-w3">
 			<h2>Sign Up</h2>
 			<form id="signup" name="signup" method="post" action="/signup">
-				<h6>Swiftly sign in with</h6>
+				<h6>Sign in with with your Google Account</h6>
 				<img src="../assets/images/google.png">
 
 	<body>
@@ -55,13 +55,6 @@
 						<label for="password"></label>
 						<input name="password" type="password" placeholder="Password" />
 					</div>
-
-					<label class="anim">
-						<input type="checkbox" class="checkbox">
-						<span>Remember Me</span>
-						<a href="#">Forgot Password</a>
-					</label>
-
 
 					<div class="clear"></div>
 
