--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,6 +28,7 @@
 		<!-- Google CDNs -->
 		<meta name="google-signin-client_id" content="244990251955-8tupip8lfhfqflk1ek4bfvkc17u1npva.apps.googleusercontent.com">
 		<script src="https://apis.google.com/js/client.js"></script>
+		<script src="//cdn.jsdelivr.net/npm/phaser@3.1.1/dist/phaser.js"></script>
 
 		<!-- css files -->
 		<!-- Bootstrap core CSS -->
