added gnome animation

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -28,11 +28,15 @@
 </nav>
 <!-- Page Content -->
 <div class="container">
+			{{!-- gnome animation --}}
+			<div style="position:relative">
+        		<div id="b" style="position:absolute;"> 
+            		<img src="../assets/images/gnome.png" alt="gnome">
+        		</div>
+    		</div>
 	<div class="row">
 		<div class="col-md-12">
-			<div class="gnome">
-				<img id="gnomeDiv" src="../assets/images/gnome.png" alt="Gnome">
-			</div>
+
 		</div>
 
 		<!--header-->
