--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,36 +1,14 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	<div class="container">
-		<a class="navbar-brand" href="#">Start Bootstrap</a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
-		    aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse" id="navbarResponsive">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="#">Home
-						<span class="sr-only">(current)</span>
-					</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">About</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Services</a>
-				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="#">Contact</a>
-				</li>
-			</ul>
-		</div>
+		<button type="button" class="btn btn-secondary" id="logout" type="logout" value="Log Out">Log Out!</button>
 	</div>
 </nav>
 <!-- Page Content -->
 <div class="container">
 			{{!-- gnome animation --}}
 			<div style="position:relative">
-        		<div id="b" style="position:absolute;"> 
+        		<div id="b" style="position:absolute;">
             		<img src="../assets/images/gnome.png" alt="gnome">
         		</div>
     		</div>
