--- a/views/partials/mini-game.handlebars
+++ b/views/partials/mini-game.handlebars
@@ -1,9 +1,10 @@
 <script type="text/javascript">
 
 var config = {
-    type: Phaser.HEADLESS,
+    type: Phaser.WEBGL,
     width: 600,
     height: 400,
+    scaleMode: 0,
     physics: {
         default: 'arcade',
         arcade: {
