--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -64,6 +64,12 @@
 			</div>
 		</div>
 	</div>
+	<!-- footer -->
+	<div class="footer">
+		<p>&copy; 2018 The Gnome Page. All rights reserved | Design by
+			<a href="https://github.com/petercboss/Papayas-Project-2">Papayas-Project-2</a>
+		</p>
+	</div>
 
 
 
