fixed minor bugs

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -37,9 +37,19 @@
 						</h3>
 
 						<div class="row">
-							<ul>
+							{{!-- <ul>
 								<li>{{{email}}}</li>
-							</ul>
+							</ul> --}}
+							<dl>
+  <dt><a href="https://mail.google.com">Message One</a></dt>
+  <dd>-From: Michael Ignaczak, mikeignaczak@gmail.com  <br> -Subject: Slides To An Awesome Pitch Presentation Template - Invitation to edit</dd>
+ <dt><a href="https://mail.google.com">Message Two</a></dt>
+  <dd>-From: Twitter, verify@twitter.com <br> -Subject: Confirm your Twitter account, Papays</dd>
+   <dt><a href="https://mail.google.com">Message Three</a></dt>
+  <dd>-From: support@newsapi.org <br> -Subject: News API registration complete!</dd>
+   <dt><a href="https://mail.google.com">Message Four</a></dt>
+  <dd>-From: OMW Team, info@openweathermap.org <br> -Subject:  OpenWeatherMap Create Account</dd>
+</dl>
 						</div>
 					</div>
 				</div>
