--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -6,21 +6,16 @@
 	<!--//header-->
 	<!--main-->
 
-	<div class="main-content-agile">
+	<div class="main-content-agile" >
 		<div class="sub-main-w3">
-			<h2>Sign Up</h2>
-			<form id="signup" name="signup" method="post" action="/signup">
-				<h6>Sign in with with your Google Account</h6>
-				<img src="../assets/images/google.png">
 
 	<body>
 		<!--header-->
 		<div class="header-w3l">
-			<h1>Transparent Sign In Form</h1>
 		</div>
 		<!--//header-->
 		<!--main-->
-		<div class="main-content-agile">
+		<div class="main-content-agile" id="signupFix">
 			<div class="sub-main-w3">
 				<h2>Sign Up</h2>
 				<form id="signup" name="signup" method="post" action="/signup">
@@ -46,7 +41,7 @@
 						<label for="city"></label>
 						<input name="city" type="text" placeholder="City" />
 					</div>
-					<div class="icon7">
+					<div class="icon5">
 						<label for="sports"></label>
 						<input name="sports" type="text" placeholder="Favorite Sports Team" />
 					</div>
