--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1054,6 +1054,10 @@ h3 {
 
 .game {	display: block; 	width: 800px; 	height: 600px; 	margin: 20px auto;} 
 
+#signupFix {
+    width: 90%;
+}
+
 @import url(https://fonts.googleapis.com/css?family=Raleway+Dots);
 .sun {
     width: 85px;
